--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -115,7 +115,7 @@ QTabBar::tab::disabled{
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>1</number>
       </property>
       <property name="iconSize">
        <size>
@@ -1285,7 +1285,7 @@ QTabBar::tab::disabled{
              <cursorShape>BlankCursor</cursorShape>
             </property>
             <property name="focusPolicy">
-             <enum>Qt::NoFocus</enum>
+             <enum>Qt::ClickFocus</enum>
             </property>
             <property name="accessibleName">
              <string>Helligkeit %</string>
@@ -1389,7 +1389,7 @@ QTabBar::tab::disabled{
              <item row="1" column="0">
               <widget class="QRadioButton" name="Stillstehend_Farbe1">
                <property name="accessibleName">
-                <string>Weiß Stillstehend Farbwahl</string>
+                <string>Weiß Stillstehend Farbwahl nicht aktiviert</string>
                </property>
                <property name="styleSheet">
                 <string notr="true">QRadioButton{
@@ -1431,7 +1431,7 @@ QRadioButton::indicator:unchecked{
              <item row="1" column="1">
               <widget class="QRadioButton" name="Stillstehend_Farbe2">
                <property name="accessibleName">
-                <string>Rot Stillstehend Farbwahl</string>
+                <string>Rot Stillstehend Farbwahl nicht aktiviert</string>
                </property>
                <property name="styleSheet">
                 <string notr="true">QRadioButton{
@@ -1467,7 +1467,7 @@ QRadioButton::indicator:unchecked{
              <item row="1" column="2">
               <widget class="QRadioButton" name="Stillstehend_Farbe4">
                <property name="accessibleName">
-                <string>Grün Stillstehend Farbwahl</string>
+                <string>Grün Stillstehend Farbwahl nicht aktiviert</string>
                </property>
                <property name="styleSheet">
                 <string notr="true">QRadioButton{
@@ -1504,7 +1504,7 @@ QRadioButton::indicator:unchecked{
              <item row="1" column="3">
               <widget class="QRadioButton" name="Stillstehend_Farbe3">
                <property name="accessibleName">
-                <string>Blau Stillstehend Farbwahl</string>
+                <string>Blau Stillstehend Farbwahl nicht aktiviert</string>
                </property>
                <property name="styleSheet">
                 <string notr="true">QRadioButton{
@@ -1543,7 +1543,7 @@ QRadioButton::indicator:unchecked{
              <item row="1" column="4">
               <widget class="QRadioButton" name="Stillstehend_Farbe5">
                <property name="accessibleName">
-                <string>Gelb Stillstehend Farbwahl</string>
+                <string>Gelb Stillstehend Farbwahl nicht aktiviert</string>
                </property>
                <property name="styleSheet">
                 <string notr="true">QRadioButton{
@@ -1645,7 +1645,7 @@ border-radius: 6px;
              <item row="1" column="0">
               <widget class="QRadioButton" name="Bewegend_Farbe1">
                <property name="accessibleName">
-                <string>Weiß Bewegend Farbwahl</string>
+                <string>Weiß Bewegend Farbwahl nicht aktiviert</string>
                </property>
                <property name="styleSheet">
                 <string notr="true">QRadioButton{
@@ -1689,7 +1689,7 @@ QRadioButton::indicator:unchecked{
              <item row="1" column="1">
               <widget class="QRadioButton" name="Bewegend_Farbe2">
                <property name="accessibleName">
-                <string>Rot Bewegend Farbwahl</string>
+                <string>Rot Bewegend Farbwahl nicht aktiviert</string>
                </property>
                <property name="styleSheet">
                 <string notr="true">QRadioButton{
@@ -1725,7 +1725,7 @@ QRadioButton::indicator:unchecked{
              <item row="1" column="2">
               <widget class="QRadioButton" name="Bewegend_Farbe4">
                <property name="accessibleName">
-                <string>Grün Bewegend Farbwahl</string>
+                <string>Grün Bewegend Farbwahl nicht aktiviert</string>
                </property>
                <property name="styleSheet">
                 <string notr="true">QRadioButton{
@@ -1761,7 +1761,7 @@ QRadioButton::indicator:unchecked{
              <item row="1" column="3">
               <widget class="QRadioButton" name="Bewegend_Farbe3">
                <property name="accessibleName">
-                <string>Blau Bewegend Farbwahl</string>
+                <string>Blau Bewegend Farbwahl nicht aktiviert</string>
                </property>
                <property name="styleSheet">
                 <string notr="true">QRadioButton{
@@ -1797,7 +1797,7 @@ QRadioButton::indicator:unchecked{
              <item row="1" column="4">
               <widget class="QRadioButton" name="Bewegend_Farbe5">
                <property name="accessibleName">
-                <string>Gelb Bewegend Farbwahl</string>
+                <string>Gelb Bewegend Farbwahl nicht aktiviert</string>
                </property>
                <property name="styleSheet">
                 <string notr="true">QRadioButton{
