--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -1117,6 +1117,9 @@ QTabBar::tab::disabled{
         </item>
         <item>
          <spacer name="verticalSpacer_5">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
@@ -1833,6 +1836,9 @@ QRadioButton::indicator:unchecked{
         </item>
         <item>
          <spacer name="verticalSpacer_6">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
@@ -1921,6 +1927,9 @@ QRadioButton::indicator:unchecked{
                <layout class="QGridLayout" name="gridLayout_2">
                 <item row="0" column="0">
                  <spacer name="verticalSpacer_4">
+                  <property name="orientation">
+                   <enum>Qt::Vertical</enum>
+                  </property>
                   <property name="sizeHint" stdset="0">
                    <size>
                     <width>20</width>
@@ -1986,6 +1995,9 @@ QRadioButton::indicator:unchecked{
            <layout class="QVBoxLayout" name="verticalLayout_7">
             <item>
              <spacer name="verticalSpacer_3">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
               <property name="sizeHint" stdset="0">
                <size>
                 <width>20</width>
@@ -2069,6 +2081,9 @@ QRadioButton::indicator:unchecked{
             </item>
             <item>
              <spacer name="verticalSpacer_2">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
               <property name="sizeHint" stdset="0">
                <size>
                 <width>20</width>
@@ -2126,6 +2141,21 @@ QRadioButton::indicator:unchecked{
           </property>
           <property name="currentRow">
            <number>-1</number>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label">
+          <property name="font">
+           <font>
+            <pointsize>14</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Hier werden alle verfügbaren Klingelbälle angezeigt. Stelle sicher, dass Bluetooth und Standort für die App aktiviert ist. </string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
@@ -2439,6 +2469,9 @@ li.checked::marker { content: &quot;\2612&quot;; }
         </item>
         <item>
          <spacer name="verticalSpacer_10">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
